# tome

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRODUCT.md  README.md  SECURITY.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: __init__.py  deps.py  main.py  ratelimit.py
docs/: github-presence.md  release-0.1.0.md
examples/hooks/: README.md  claude_code_memory.py
mcp_server/: __init__.py  launch.py  server.py
tests/: conftest.py  test_admin_api.py  test_app_lifecycle.py  test_cli.py  test_connectors.py  test_dependencies_contract.py  test_embed_local.py  test_encoding_repair.py  test_extract_docling.py  test_extractors_contract.py  test_faithfulness_preservation.py  test_folder_resolution.py  test_folder_safety.py  test_garbled_permutation.py  test_garbled_text.py  test_graph.py  test_harness_smoke.py  test_hooks_example.py  test_hybrid_search.py  test_ingest_api.py  test_integration.py  test_job_recovery.py  test_jobs_api.py  test_lang.py  test_limits.py  test_local_profile.py  test_markdown_invariant.py  test_mcp_bind.py  test_mcp_ingest.py  test_memory_api.py  test_memory_consolidation.py  test_memory_store.py  test_no_hallucinate_garbled.py  test_nul_db.py  test_nul_sanitize.py  test_ocr_parallel.py  test_pdf_pagination.py  test_pipeline.py  test_positioning.py  test_redact.py  (+13 more)
tome/: __init__.py  cli.py  config.py  conflict.py  db.py  dedup.py  edit.py  evalkit.py  export.py  gc.py  graph.py  lang.py  memory.py  ratelimit.py  redact.py  reindex.py  rerank.py  schema.sql  security.py  signing.py  storage.py  store.py  webhooks.py  worker.py
tome/embed/: __init__.py  base.py  fastembed_provider.py  hashing.py  local.py  openai_compatible.py  registry.py
tome/extract/: __init__.py  aws_textract.py  azure_di.py  base.py  docling.py  google_docai.py  llamaparse.py  marker.py  mistral_ocr.py  passthrough.py  pdfutil.py  registry.py  tika.py  unstructured.py  vision_llm.py
tome/llm/: __init__.py  anthropic_provider.py  base.py  openai_compatible.py  registry.py
tome/pipeline/: __init__.py  atlas.py  chunk.py  clean.py  naming.py  run.py  split.py  structure.py  verify.py  vision.py
tome/prompts/: __init__.py  atlas.txt  classify_image.txt  memory_consolidate.txt  name.txt  structure.txt  vision.txt  vision_combined.txt
webui/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
webui/src/: App.tsx  index.css
webui/src/components/: Admin.tsx  Atlas.tsx  DocumentView.tsx  Graph.tsx  Jobs.tsx  JobsPanel.tsx  Login.tsx  Markdown.tsx  Memory.tsx  Panels.tsx  Sidebar.tsx  ui.tsx
webui/src/lib/: api.ts
