[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tome"
version = "0.1.0"
description = "Tome — agent-native knowledge OS: any extractor, any model, markdown-native, hybrid search."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tenacity>=8.3",
    "PyMuPDF>=1.24",
    "Pillow>=10.0",
    "mcp>=1.2",
    "mcpo>=0.0.10",
    "openai>=1.40",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.34"]
worker = ["rq>=1.16", "redis>=5.0"]
serve = ["mcpo>=0.0.10"]
dev = ["pytest>=8.0"]

[project.scripts]
tome = "tome.cli:main"

[tool.setuptools]
packages = [
    "tome", "tome.llm", "tome.extract", "tome.embed", "tome.pipeline",
    "api", "mcp_server",
]
include-package-data = true

[tool.setuptools.package-data]
tome = ["prompts/*.txt", "schema.sql"]
api = ["static/*"]
