[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tome"
version = "0.1.0"
description = "Tome — agent-native knowledge OS: any extractor, any model, markdown-native, hybrid search."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tenacity>=8.3",
    "PyMuPDF>=1.24",
    "Pillow>=10.0",
    "mcp>=1.2",
    "mcpo>=0.0.10",
    "openai>=1.40",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
# ── LLM / runtime ──
anthropic = ["anthropic>=0.34"]
worker = ["rq>=1.16", "redis>=5.0"]
serve = ["mcpo>=0.0.10"]
# ── extractor providers (lazy-imported; install only what you use) ──
docling = ["docling>=2.0"]
marker = ["marker-pdf>=1.0"]
azure = ["azure-ai-documentintelligence>=1.0"]
aws = ["boto3>=1.34"]
gcp = ["google-cloud-documentai>=2.20"]
# ── local, offline models ──
fastembed = ["fastembed>=0.3"]            # light ONNX embedder (zero-egress default)
local = ["sentence-transformers>=3.0"]    # heavier embedder option
rerank = ["sentence-transformers>=3.0"]   # local cross-encoder reranker
cohere = ["cohere>=5.0"]                  # cloud reranker
# ── convenience: everything ──
all = [
    "anthropic>=0.34", "docling>=2.0", "marker-pdf>=1.0",
    "azure-ai-documentintelligence>=1.0", "boto3>=1.34",
    "google-cloud-documentai>=2.20", "fastembed>=0.3",
    "sentence-transformers>=3.0", "cohere>=5.0",
]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
tome = "tome.cli:main"

[tool.setuptools]
packages = [
    "tome", "tome.llm", "tome.extract", "tome.embed", "tome.pipeline",
    "api", "mcp_server",
]
include-package-data = true

[tool.setuptools.package-data]
tome = ["prompts/*.txt", "schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    # third-party deprecation from Starlette's TestClient (not our code)
    "ignore::DeprecationWarning:starlette.testclient",
]
markers = [
    "unit: pure logic, no IO or network",
    "contract: invariants (markdown-canonical, providers, dependencies, repo hygiene)",
    "integration: requires Postgres via TOME_TEST_DSN",
    "e2e: full docker compose stack",
]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [".venv", "webui", "_store", "_stage", "sources", "pending"]

[tool.ruff.lint]
# High-signal set for CI: syntax errors, undefined names, bad asserts, unused imports.
# Broader style rules are tightened progressively in later sprints.
select = ["E9", "F63", "F7", "F82", "F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # intentional re-exports
"tests/*" = ["F401"]
